# website-scrapper-bark.com

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.sh  validate_package.py
docs/: BUG_FIX_REPORT.md  PROJECT_SUMMARY.md  README.md  USAGE_EXAMPLES.md
examples/: production_demo.py
output/: README.md  bark_personal-trainer_massage_manchester.csv  demo_comprehensive_results.csv  multi_service_demo.csv  web_designers_london.csv
src/: __init__.py  bark_scraper.py  config.py  scraper_cli.py
tests/: test_scraper.py
